<resources>
    <string name="app_name">My Finance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login_form_title">Registrate!</string>
    <string name="login_form_username">Username</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_login">LOGIN</string>
    <string name="register_form_register">Registro</string>

    <string name="menu_gastos">Gastos</string>
    <string name="menu_ingresos">Ingresos</string>
    <string name="menu_categorias">Categorias</string>
    <string name="menu_account">Cuentas</string>
    <string name="menu_logout">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_expense_button_description">Add new Expense</string>
    <string name="add_account_button">Add new Account</string>
    <string name="add_income_button_description">Add new Income</string>
    <string name="add_category_button_description">Add new Category</string>
</resources>