<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_card"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_gastos"
            android:icon="@drawable/ic_down_24"
            android:title="@string/menu_gastos" />
        <item
            android:id="@+id/nav_ingresos"
            android:icon="@drawable/baseline_trending_up_24"
            android:title="@string/menu_ingresos" />

        <item
            android:id="@+id/nav_categorias"
            android:icon="@drawable/baseline_category_24"
            android:title="@string/menu_categorias" />

    </group>

    <group android:id="@+id/group_session"
        android:layout_gravity="bottom">
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_power"
            android:title="@string/menu_logout" />
    </group>
</menu>