<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.zrisan.my_finance.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gastos"
        android:name="com.zrisan.my_finance.ui.gastos.GastosFragment"
        android:label="@string/menu_gastos"
        tools:layout="@layout/fragment_gastos" />

    <fragment
        android:id="@+id/nav_ingresos"
        android:name="com.zrisan.my_finance.ui.ingresos.IngresosFragment"
        android:label="@string/menu_ingresos"
        tools:layout="@layout/fragment_ingresos" />

    <fragment
        android:id="@+id/nav_categorias"
        android:name="com.zrisan.my_finance.ui.categorias.CategoriasFragment"
        android:label="@string/menu_categorias"
        tools:layout="@layout/fragment_categorias" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.zrisan.my_finance.ui.account.FragmentAccount"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />


</navigation>